# TinadecCode

./: AGENTS.md  CLAUDE.md  README.md  TinadecOffice.slnx  agent plan.md  package-lock.json  package.json  screenshot_test.py  terminal-fix-plan.md
TinadecTools/: Program.cs
TinadecTools.Generators/: ToolFunctionGenerator.cs
TinadecTools/Abstractions/: ToolCalling.cs  ToolFunctionAttribute.cs  ToolRegistry.cs
TinadecTools/Tools/FileRW/: FileAccessor.cs
apps/desktop/: AGENTS.md  index.html
docs/: agent-debug-studio-plan.md  agent-harness-product-model.en.md  agent-harness-product-model.zh-CN.md  architecture.md  git-module-status-and-roadmap.md  reference-project-map.md  startup.md
gateway/: AGENTS.md
gateway/src/: codeTools.ts  coreClient.test.ts  index.ts  modelAgentCenter.test.ts  modelAgentCenter.ts
native/: Cargo.toml  UPSTREAM.md  test_input.json
src/TinadecCore/: AGENTS.md  Program.cs  TinadecCore.csproj
src/TinadecModel/: TinadecModel.csproj
tests/Tinadec.Contracts.Tests/: ModelContractTests.cs  Tinadec.Contracts.Tests.csproj
tests/TinadecCore.Tests/: AnthropicProviderRuntimeTests.cs  ArchitectureBoundaryTests.cs  CliProviderRuntimeTests.cs  CoreCapabilityAdapterTests.cs  CoreStoreTests.cs  CredentialSafetyTests.cs  LocalHttpProviderRuntimeTests.cs  MigrationTests.cs  ModelInvocationRuntimeTests.cs  ModelProviderCatalogTests.cs  ModelRouteResolverTests.cs  OpenAiCompatibleClientTests.cs  OrchestratorServiceTests.cs  PromptContextServiceTests.cs  ProviderModuleTests.cs  ProviderPolicyTests.cs  ProviderTracingTests.cs  TinadecCore.Tests.csproj
(+102 files in other folders)
