[workspace]
members = [
  "glue/core-cdylib",
  "glue/codex-apply-patch-lite",
  "glue/codex-exec-server-shim",
  "glue/code-native"
]
exclude = [
  "codex-src"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/wwiinnddyy/TinadecOffice"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
